--- a/index.html
+++ b/index.html
@@ -1,2 +1,23 @@
 <!DOCTYPE html>
-<html><body>Hello AR</body></html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>ARえほん</title>
+    <script src="https://cdn.jsdelivr.net/npm/aframe@1.2.0/dist/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-aframe.prod.js"></script>
+    <style>body { margin: 0; }</style>
+  </head>
+  <body>
+    <a-scene mindar-image="imageTargetSrc: target.mind;" embedded color-space="sRGB" renderer="precision: mediump;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: true">
+      <a-assets>
+        <img id="myimage" src="sample-image.jpg" />
+      </a-assets>
+
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+
+      <a-entity mindar-image-target="targetIndex: 0">
+        <a-plane src="#myimage" position="0 0 0" height="1" width="1"></a-plane>
+      </a-entity>
+    </a-scene>
+  </body>
+</html>
