--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <style>body { margin: 0; }</style>
   </head>
   <body>
-    <a-scene mindar-image="imageTargetSrc: target.mind;" embedded color-space="sRGB" renderer="precision: mediump;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: true">
+    <a-scene mindar-image="imageTargetSrc: apple.mind;" embedded color-space="sRGB" renderer="precision: mediump;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: true">
       <a-assets>
-        <img id="myimage" src="sample-image.jpg" />
+        <img id="myimage" src="sample-Lemon.jpg" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
