--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <a-scene mindar-image="imageTargetSrc: apple.mind;" embedded color-space="sRGB" renderer="precision: mediump;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: true">
       <a-assets>
-        <img id="myimage" src="sample-Lemon.jpg" />
+        <img id="myimage" src="Lemon.jpg" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
