--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
     <style>body { margin: 0; }</style>
   </head>
   <body>
-<a-scene embedded>
-  <a-assets>
-    <img id="myimage" src="Lemon.jpg" />
-  </a-assets>
-  <a-camera></a-camera>
-  <a-plane src="#myimage" position="0 1 -3" height="1" width="1"></a-plane>
-</a-scene>
+    <a-scene mindar-image="imageTargetSrc: apple.mind;" embedded color-space="sRGB" renderer="precision: mediump;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: true">
+      <a-assets>
+        <img id="myimage" src="Lemon.jpg" />
+      </a-assets>
+
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+
+      <a-entity mindar-image-target="targetIndex: 0">
+        <a-plane src="#myimage" position="0 0 0" height="1" width="1"></a-plane>
+      </a-entity>
+    </a-scene>
   </body>
 </html>
